# WasmCloud

./: .gitignore
Actors/my-actor/: .gitignore  Cargo.toml  wasmcloud.toml
Actors/my-actor-2/: Cargo.toml  README.md  wasmcloud.toml
Actors/my-actor-2/src/: lib.rs
Actors/my-actor-2/test_files/: hello.wat
Actors/my-actor-3/: Cargo.toml  README.md  run_ipfs.sh  wasmcloud.toml
Actors/my-actor-3/src/: lib.rs
Actors/my-actor-3/test_files/: index.html  my.html  test1.txt
Actors/my-actor/src/: lib.rs
HelloWorldDotNet/: HelloWorld.csproj  Program.cs
RustExperiments/wasm_hello_world/: Cargo.toml
RustExperiments/wasm_hello_world/src/: main.rs
