[package]
name = "my-actor-3"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "my_actor_3"

[dependencies]
futures = "0.3"
serde_json = "1.0.85"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10"
wasmcloud-interface-httpclient = "0.9"
url = "2.2"
anyhow = "1.0.71"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
