[package]
name = "my_actor"
version = "0.1.0"
authors = [ "Eldar Kalachev" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "my_actor"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10.0"
#wasmcloud-interface-httpclient = "0.9.0"
#wasmcloud-httpclient = "0.2.4"
#async-trait = "0.1"
url = "2.2"
#isahc = "1.7"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
